--- a/css/bridge.css
+++ b/css/bridge.css
@@ -526,6 +526,20 @@
   @media (max-width: 767px) {
     .my-transaction-web {
       display: none !important; } }
+  .my-transaction-web .table .acc-actn {
+    width: 40px; }
+  .my-transaction-web .table .table-acc-btn {
+    background-color: transparent;
+    border: none;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; }
+    .my-transaction-web .table .table-acc-btn img {
+      width: 20px;
+      filter: brightness(5); }
 
 .my-transaction-table-cover .trns-history-table td.sts-td .sts-ind {
   display: inline-block;
@@ -726,5 +740,69 @@
             .passcode-bridge .passcode-content-block .form-block .btn-block .proceed-btn {
               width: 100%;
               font-size: 14px; } }
+
+.more-det-outer .status-title {
+  font-size: 14px;
+  font-weight: 700; }
+.more-det-outer .more-det-row {
+  flex-wrap: wrap;
+  display: flex; }
+  .more-det-outer .more-det-row .more-det-col {
+    background-color: #0D0D0D;
+    border: 1px solid #181818;
+    border-radius: 8px;
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 5px;
+    margin-right: 15px;
+    margin-left: 0;
+    min-height: 78px; }
+    .more-det-outer .more-det-row .more-det-col h5 {
+      display: flex;
+      align-items: center;
+      font-size: 15px;
+      font-weight: 600; }
+      .more-det-outer .more-det-row .more-det-col h5 .status {
+        padding-left: 10px;
+        font-size: 13px;
+        display: inline-block;
+        color: #0DAD4D;
+        font-weight: 400;
+        margin-left: 5px;
+        text-align: right;
+        margin-left: auto; }
+        .more-det-outer .more-det-row .more-det-col h5 .status.status-warning {
+          color: #2966FF; }
+        .more-det-outer .more-det-row .more-det-col h5 .status.status-dngr {
+          color: #FC5252; }
+      .more-det-outer .more-det-row .more-det-col h5 .lbl-sm {
+        display: inline-block;
+        margin-left: 5px;
+        font-size: 13px;
+        font-weight: 400;
+        color: #9f9f9f; }
+    .more-det-outer .more-det-row .more-det-col .id-data-col {
+      display: flex;
+      align-items: center; }
+      .more-det-outer .more-det-row .more-det-col .id-data-col .data-id {
+        color: #fff;
+        font-size: 13px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 200px; }
+      .more-det-outer .more-det-row .more-det-col .id-data-col .more-sm-btn {
+        background-color: #1A1A1B;
+        border: none;
+        margin-left: 8px;
+        padding: 0;
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center; }
+        .more-det-outer .more-det-row .more-det-col .id-data-col .more-sm-btn img {
+          filter: brightness(5); }
 
 /*# sourceMappingURL=bridge.css.map */
