--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -1098,5 +1098,31 @@
     border-left: solid 1px #181818; }
   .theme-dark .bridge-body-cover .data-connect-cover .connect-card-outer .id-add-block .id-add-wrapper .id-inp-block .id-inp {
     color: #fff; }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover h3 {
+    color: #fff; }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover {
+    border-color: #222222; }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover .more-det-col,
+  .theme-dark .more-det-outer .more-det-row .more-det-col {
+    background-color: #161616;
+    border: 1px solid #222222; }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover .more-det-col h5,
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover .more-det-col .id-data-col .data-id,
+  .theme-dark .more-det-outer .more-det-row .more-det-col h5, .theme-dark .more-det-outer .more-det-row .more-det-col .id-data-col .data-id,
+  .theme-dark .more-det-outer .status-title {
+    color: #fff; }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover .more-det-col h5 .lbl-sm,
+  .theme-dark .more-det-outer .more-det-row .more-det-col h5 .lbl-sm {
+    color: #9f9f9f; }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover .more-det-col .id-data-col .more-sm-btn,
+  .theme-dark .more-det-outer .more-det-row .more-det-col .id-data-col .more-sm-btn {
+    background-color: #292929; }
+    .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover .more-det-col .id-data-col .more-sm-btn img,
+    .theme-dark .more-det-outer .more-det-row .more-det-col .id-data-col .more-sm-btn img {
+      filter: brightness(5); }
+  .theme-dark .bridge-body-cover .my-transaction-cover .my-transaction-card .more-card-data-cover {
+    border-color: #222222; }
+  .theme-dark .my-transaction-web .table .table-acc-btn img {
+    filter: brightness(5); }
 
 /*# sourceMappingURL=dark-theme.css.map */
