--- a/scss/bridge.scss
+++ b/scss/bridge.scss
@@ -25,8 +25,9 @@
         @media ($sm-1199) {
             max-width: 530px;
         }
-        @media ($sm-767) {
-            max-width: 480px;
+        @media ($sm-579) {
+            padding-left: 10px;
+            padding-right: 10px;
         }
     }
     .bridge-banner-sec{
@@ -525,15 +526,16 @@
             }
             .more-card-data-cover{
                 margin: 10px 0;
-                border-top: 1px solid #222222;
+                border-top: 1px solid #E3E4F3;
                 padding-top: 15px;
                 h3{
+                    color: $text-primary-dark;
                     font-size: 14px;
                     font-weight: 600;
                 }
                 .more-det-col{
-                    background-color: #161616;
-                    border: 1px solid #222222;
+                    background-color: #fff;
+                    border: 1px solid #E3E4F3;
                     border-radius: 8px;
                     display: inline-block;
                     padding: 10px 15px;
@@ -545,6 +547,7 @@
                         align-items: center;
                         font-size: 15px;
                         font-weight: 600;
+                        color: $text-primary-dark;
                         .status{
                             padding-left: 10px;
                             font-size: 12px;
@@ -567,22 +570,23 @@
                             font-size: 13px;
                             font-weight: 400;
 
-                            color: #9f9f9f;
+                            color: $text-primary-light;
                         }
                     }
                     .id-data-col{
                         display: flex;
                         align-items: center;
                         .data-id{
-                            color: #fff;
-                            font-size: 14px;
+                            padding-right: 10px;
+                            color: $text-primary-dark;
+                            font-size: 13px;
                             white-space: nowrap;
                             overflow: hidden;
                             text-overflow: ellipsis;
                             max-width: 200px;
                         }
                         .more-sm-btn{
-                            background-color: #292929;
+                            background-color: #e3e4f3;
                             border: none;
                             margin-left: 8px;
                             padding: 0;
@@ -594,7 +598,6 @@
                             justify-content: center;
                             img{
                                 max-width: 14px;
-                                filter: brightness(5);
                             }
                         }
                     }
@@ -747,7 +750,6 @@
             justify-content: center;
             img{
                 width: 20px;
-                filter: brightness(5);
             }
         }
     }
@@ -993,6 +995,7 @@
 
 .more-det-outer{
     .status-title{
+        color: $text-primary-dark;
         font-size: 14px;
         font-weight: 700;
     }
@@ -1000,8 +1003,8 @@
         flex-wrap: wrap;
         display: flex;
         .more-det-col{
-            background-color: #0D0D0D;
-            border: 1px solid #181818;
+            background-color: #fff;
+            border: 1px solid #E3E4F3;
             border-radius: 8px;
             display: inline-block;
             padding: 10px 20px;
@@ -1014,6 +1017,7 @@
                 align-items: center;
                 font-size: 15px;
                 font-weight: 600;
+                color: $text-primary-dark;
                 .status{
                     padding-left: 10px;
                     font-size: 13px;
@@ -1036,14 +1040,14 @@
                     font-size: 13px;
                     font-weight: 400;
 
-                    color: #9f9f9f;
+                    color: $text-primary-light;
                 }
             }
             .id-data-col{
                 display: flex;
                 align-items: center;
                 .data-id{
-                    color: #fff;
+                    color: $text-primary-dark;
                     font-size: 13px;
                     white-space: nowrap;
                     overflow: hidden;
@@ -1051,7 +1055,7 @@
                     max-width: 200px;
                 }
                 .more-sm-btn{
-                    background-color: #1A1A1B;
+                    background-color: #e3e4f3;
                     border: none;
                     margin-left: 8px;
                     padding: 0;
@@ -1062,7 +1066,7 @@
                     align-items: center;
                     justify-content: center;
                     img{
-                        filter: brightness(5);
+                        
                     }
                 }
             }
