--- a/css/bridge.css
+++ b/css/bridge.css
@@ -362,6 +362,7 @@
             border: none;
             box-shadow: none;
             outline: none;
+            width: 100%;
             max-width: 95%;
             padding: 0;
             font-size: 16px;
