--- a/scss/bridge.scss
+++ b/scss/bridge.scss
@@ -417,6 +417,7 @@
                             box-shadow: none;
                             outline: none;
                             // width: 100px;
+                            width: 100%;
                             max-width: 95%;
                             padding: 0;
                             font-size: 16px;
