bridg inp color

--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -1006,7 +1006,7 @@
     .theme-dark .bridge-body-cover .data-connect-cover .connect-card-outer .data-connect-card .data-title-block .right-block .select-block .connect-select option {
       background-color: #000; }
   .theme-dark .bridge-body-cover .data-connect-cover .connect-card-outer .data-connect-card .coin-wrapper .props-val .props-inp {
-    color: #4B4B4B; }
+    color: #fff; }
   .theme-dark .bridge-body-cover .data-connect-cover .connect-card-outer .data-connect-card .coin-wrapper .props-val .max-btn {
     background-color: #151515;
     color: #787878; }
