--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1516,7 +1516,7 @@ $dark-block-2: #2B2C2E;
         }
     }
     .bridge-body-cover .data-connect-cover .connect-card-outer .data-connect-card .coin-wrapper .props-val .props-inp {
-        color: #4B4B4B;
+        color: #fff;
     }
     .bridge-body-cover .data-connect-cover .connect-card-outer .data-connect-card .coin-wrapper .props-val .max-btn {
         background-color: #151515;
