--- a/css/side-nav.css
+++ b/css/side-nav.css
@@ -162,6 +162,19 @@
             display: inline-block;
             padding-left: 20px;
             color: #4D6090; }
+          .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .new-label {
+            display: inline-block;
+            background-color: #2966FF;
+            color: #fff;
+            font-size: 10px;
+            line-height: 11px;
+            font-weight: 300;
+            padding: 4px 6px;
+            border-radius: 12px;
+            margin-left: auto; }
+            @media (max-width: 991px) {
+              .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .new-label {
+                margin-left: 10px; } }
           .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-icon {
             display: inline-block;
             width: 20px;
@@ -298,7 +311,8 @@
 .nav-collapse .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
   display: none; }
 .nav-collapse .nav-footer-block .nav-footer-logo,
-.nav-collapse .nav-footer-block .welcome-msg, .nav-collapse .nav-footer-block .nav-soc-block {
+.nav-collapse .nav-footer-block .welcome-msg, .nav-collapse .nav-footer-block .nav-soc-block,
+.nav-collapse .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .new-label {
   opacity: 0;
   transition-delay: 0s; }
 .nav-collapse .nav-block .nav-logo-wrapper {
