--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -178,6 +178,20 @@
                         padding-left: 20px;
                         color: #4D6090;
                     }
+                    .new-label{
+                        display: inline-block;
+                        background-color: $primary-blue;
+                        color: #fff;
+                        font-size: 10px;
+                        line-height: 11px;
+                        font-weight: 300;
+                        padding: 4px 6px;
+                        border-radius: 12px;
+                        margin-left: auto;
+                        @media ($sm-991) {
+                            margin-left: 10px;
+                        }
+                    }
                     .nav-icon{
                         display: inline-block;
                         width: 20px;
@@ -362,7 +376,8 @@
         display: none;
     }
     .nav-footer-block .nav-footer-logo, 
-     .nav-footer-block .welcome-msg, .nav-footer-block .nav-soc-block{
+     .nav-footer-block .welcome-msg, .nav-footer-block .nav-soc-block, 
+     .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .new-label{
         opacity: 0;
         transition-delay: 0s;
      }
