--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -430,6 +430,9 @@
     .nav-collapse .nav-block .nav-logo-wrapper .nav-logo .logo-txt {
         opacity: 1 !important;
     }
+    .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .new-label{
+        opacity: 1 !important;
+    }
     .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link{
         font-size: 1rem;
     }
