--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1706,4 +1706,7 @@ $dark-block-2: #2B2C2E;
             color: #FFEE57;
         }
     }
+    .bridge-body-cover .bridge-banner-sec .tut-block.bridge-info-1 .info-data p{
+        color: #7B7B7B;
+    }
 }
