--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -1131,5 +1131,7 @@
       filter: brightness(0) saturate(100%) invert(92%) sepia(87%) saturate(6698%) hue-rotate(313deg) brightness(105%) contrast(97%); }
     .theme-dark .bridge-body-cover .tut-info-block .info-data {
       color: #FFEE57; }
+  .theme-dark .bridge-body-cover .bridge-banner-sec .tut-block.bridge-info-1 .info-data p {
+    color: #7B7B7B; }
 
 /*# sourceMappingURL=dark-theme.css.map */
